name:                lnforum-types-gen
version:             0.1.0.118
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/lnforum-types-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.T
                       LN.T.ACL
                       LN.T.Api
                       LN.T.Board
                       LN.T.Convert
                       LN.T.Count
                       LN.T.Ent
                       LN.T.Error
                       LN.T.Forum
                       LN.T.Job
                       LN.T.Like
                       LN.T.Like.Extra
                       LN.T.Param
                       LN.T.Pack.Boot
                       LN.T.Pack.User
                       LN.T.Pack.Sanitized.User
                       LN.T.Pack.Forum
                       LN.T.Pack.Board
                       LN.T.Pack.Thread
                       LN.T.Pack.ThreadPost
                       LN.T.Pack.PmIn
                       LN.T.Pack.PmOut
                       LN.T.Permission
                       LN.T.Pm
                       LN.T.PmIn
                       LN.T.PmOut
                       LN.T.Profile
                       LN.T.Size
                       LN.T.Thread
                       LN.T.ThreadPost
                       LN.T.User
                       LN.T.Visibility
                       LN.T.View
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , deepseq
                     , text
                     , time
                     , haskell-api-helpers-shared
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite lnforum-types-gen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lnforum-types-gen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/lnforum-types-gen
